<resources>
    <string name="app_name">AndroidSecondHomework</string>
    <string name="profile_info">Profile Info</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="save_button">Save</string>
    <string name="clear_button">Clear</string>
    <string name="again_button">Again</string>
    <string name="output_age">Age: %1$s</string>
</resources>